--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.100.1
 uvicorn[standard]==0.23.2
 pinecone-client==4.1.0
+numpy==1.26.4
 pydantic==2.7.1
 requests==2.31.0
 google-auth==2.29.0
