--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.0.4",
-    "video.js": "^8.12.0"
+    "video.js": "^8.12.0",
+    "mic-recorder-to-mp3": "^2.2.2",
+    "wavesurfer.js": "^7.1.4"
   }
 }
